--- a/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
+++ b/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
@@ -20,8 +20,8 @@ borderStyle:string=solid
 borderStyleAnnotations:string=solid
 
 globalBorderColor:string=#8cacbb
-globalBackgroundColor:string=#dee7ec
-globalFontColor:string=#436976
+globalBackgroundColor:string=#f0f2f2
+globalFontColor:string=#000
 
 headingFontFamily:string=Tahoma, Geneva, sans-serif
 
@@ -45,3 +45,6 @@ helpBackgroundColor:string=#ffffe1
 portalMinWidth:string=70em
 columnOneWidth:string=16em
 columnTwoWidth:string=16em
+
+portalHeaderHeight:string=104px
+bgColorGlobalnavTabs:string=#ff6046
