--- a/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
+++ b/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
@@ -2,7 +2,7 @@ title:string=Plone's color, font, logo and border defaults
 
 plone_skin:string=Plone Default
 
-logoName:string=logo.jpg
+logoName:string=logoRain.png
 
 fontFamily:string=Tahoma, Geneva, sans-serif
 fontBaseSize:string=75%
@@ -46,6 +46,6 @@ portalMinWidth:string=70em
 columnOneWidth:string=16em
 columnTwoWidth:string=16em
 
-portalHeaderHeight:string=104px
+portalHeaderHeight:int=104
 bgColorGlobal:string=#f0f2f2
 bgColorGlobalnavTabs:string=#ff6046
