--- a/quintagroup/theme/sunrain/skins/theme_sun/base_properties.props
+++ b/quintagroup/theme/sunrain/skins/theme_sun/base_properties.props
@@ -2,28 +2,28 @@ title:string=Plone's color, font, logo and border defaults
 
 plone_skin:string=Plone Default
 
-logoName:string=logo.jpg
+logoName:string=logoRain.png
 
-fontFamily:string="Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif
-fontBaseSize:string=69%
+fontFamily:string=Tahoma, Geneva, sans-serif
+fontBaseSize:string=75%
 fontColor:string=#332c34
-fontSmallSize:string=90%
+fontSmallSize:string=100%
 
-backgroundColor:string=White
+backgroundColor:string=#fff
 
-linkColor:string=#436976
+linkColor:string=#663300
 linkActiveColor:string=Red
-linkVisitedColor:string=Purple
+linkVisitedColor:string=#cc9966
 
 borderWidth:string=1px
 borderStyle:string=solid
 borderStyleAnnotations:string=solid
 
 globalBorderColor:string=#8cacbb
-globalBackgroundColor:string=#dee7ec
-globalFontColor:string=#436976
+globalBackgroundColor:string=#663300
+globalFontColor:string=#bee458
 
-headingFontFamily:string="Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif
+headingFontFamily:string=Tahoma, Geneva, sans-serif
 
 contentViewBorderColor:string=#74ae0b
 contentViewBackgroundColor:string=#cde2a7
@@ -33,8 +33,8 @@ inputFontColor:string=Black
 
 textTransform:string=none
 
-evenRowBackgroundColor:string=#eef3f5 
-oddRowBackgroundColor:string=transparent
+evenRowBackgroundColor:string=#ffffcc
+oddRowBackgroundColor:string=#ffffcc 
 
 notifyBorderColor:string=#ffa500
 notifyBackgroundColor:string=#ffce7b
@@ -42,6 +42,13 @@ notifyBackgroundColor:string=#ffce7b
 discreetColor:string=#76797c
 helpBackgroundColor:string=#ffffe1
 
-portalMinWidth:string=70em
-columnOneWidth:string=16em
-columnTwoWidth:string=16em
+portalMinWidth:string=0
+columnOneWidth:string=200px
+columnTwoWidth:string=250px
+
+portalHeaderHeight:int=104
+bgColorGlobal:string=#ffffcc
+bgColorContent:string=#fffff0
+bgColorGlobalnavTabs:string=#663300
+bgColornavTabs:string=#663300
+portletBackgroundItem:string=#ff0000
