--- a/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
+++ b/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
@@ -47,6 +47,7 @@ columnOneWidth:string=200px
 columnTwoWidth:string=250px
 
 portalHeaderHeight:int=104
+linkColorHeader:string=#fff
 bgColorGlobal:string=#f0f2f2
 bgColorContent:string=#f0f2f2
 bgColorGlobalnavTabs:string=#ff6046
