--- a/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
+++ b/quintagroup/theme/sunrain/skins/theme_rain/base_properties.props
@@ -52,3 +52,4 @@ bgColorContent:string=#f0f2f2
 bgColorGlobalnavTabs:string=#ff6046
 bgColornavTabs:string=#332c34
 ItemSloganColor:string=#e5e7eb
+bgHoverColorPersonaltools:string=#323953
