added new functionality: change backround-image for the header

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -4,3 +4,4 @@ description = This is Quintagroup SunRain Theme 6.0.2
 
 [theme:parameters]
 theme = string:rain
+top_image = context/topimage/absolute_url | nothing
