update style to search, changed customization slogan

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -1,7 +1,10 @@
 [theme]
 title = SunRain theme
-description = This is Quintagroup SunRain Theme 6.0.4
+description = This is Quintagroup SunRain Theme 6.0.5
 
 [theme:parameters]
+ajax_load = python: 'ajax_load' in request.form
+stat = portal/portal_properties/site_properties/webstats_js
 theme = string:rain
 top_image = context/topimage/absolute_url | nothing
+slogan = context/slogan | string: Type your slogan here
