deleted actions.xml, changed the order of inserting ploneCustom.css, update style

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -7,4 +7,4 @@ ajax_load = python: 'ajax_load' in request.form
 stat = portal/portal_properties/site_properties/webstats_js
 theme = string:rain
 top_image = context/topimage/absolute_url | nothing
-slogan = python:path('context/slogan|string:').decode('utf-8', 'ignore')
+slogan = string:Type your slogan here
