updated Doctype for PLone 4.2

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -1,6 +1,7 @@
 [theme]
 title = SunRain theme
-description = This is Quintagroup SunRain Theme 6.0.7
+description = This is Quintagroup SunRain Theme 6.0.8
+doctype = <!DOCTYPE html>
 
 [theme:parameters]
 theme = string:rain
