--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -1,9 +1,11 @@
 [theme]
 title = SunRain theme
-description = This is Quintagroup SunRain Theme 6.0.10
+description = SunRain Theme for Plone
 doctype = <!DOCTYPE html>
+preview = images/preview.png
 
 [theme:parameters]
 theme = string:rain
 top_image = context/topimage/absolute_url | nothing
 slogan = string:Type your slogan here
+ajax_load = python: request.form.get('ajax_load')
