Fixed styles for megamenu

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -6,6 +6,7 @@ preview = images/preview.png
 
 [theme:parameters]
 theme = string:rain
+home_page = python: context_state.is_portal_root() and context_state.is_view_template()
 top_image = context/topimage/absolute_url | nothing
 slogan = string:Type your slogan here
 ajax_load = python: request.form.get('ajax_load')
