Initial release for Plone 5

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -1,12 +1,12 @@
 [theme]
-title = SunRain theme
-description = SunRain Theme for Plone
+title = Sunrain Theme
+description = Sunrain Theme theme for Plone
 doctype = <!DOCTYPE html>
 preview = images/preview.png
 
 [theme:parameters]
-theme = string:rain
 home_page = python: context_state.is_portal_root() and context_state.is_view_template()
-top_image = context/topimage/absolute_url | nothing
-slogan = string:Type your slogan here
 ajax_load = python: request.form.get('ajax_load')
+slogan = string:Type your slogan here
+theme = string:rain
+top_image = context/topimage/absolute_url | nothing
