Fixed css styles and included js files by requirejs

--- a/quintagroup/theme/sunrain/static/manifest.cfg
+++ b/quintagroup/theme/sunrain/static/manifest.cfg
@@ -12,8 +12,8 @@ development-css = /++theme++quintagroup.theme.sunrain/less/sunrain.plone.less
 production-css = /++theme++quintagroup.theme.sunrain/css/sunrain-compiled.css
 tinymce-content-css = /++theme++quintagroup.theme.sunrain/css/sunrain-compiled.css
 
-development-js = 
-production-js = 
+development-js = /++theme++quintagroup.theme.sunrain/js/sunrain.js
+production-js = /++theme++quintagroup.theme.sunrain/js/sunrain.js
 
 
 [theme:parameters]
