--- a/quintagroup/theme/sunrain/static/package.json
+++ b/quintagroup/theme/sunrain/static/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-cli": "0.1.13",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-requirejs": "~0.4.3",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sed": "^0.1.1"
+    "grunt-sed": "^0.1.1",
+    "grunt-autoprefixer": "~3.0.3"
   }
 }
